# devutils

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.in  NEWS  README.md  config.h  configure.sh  meson.build  meson_options.txt
doc/: checksum.1  cloc.1  countfile.1  diff.1  hexdump.1  meson.build
src/: checksum.c  cloc.c  countfile.c  diff.c  hexdump.c  meson.build
src/include/: checksum.h  cloc.h  countfile.h  diff.h  hexdump.h
